# vid2atl

./: .env-example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
src/: dependencies.py  logger.py  main.py  schemas.py  settings.py
src/services/: article.py  gpt.py  screenshots.py  transcript.py  translation.py  whisper.py
src/services/screenshots/: frame_selector.py  postprocessor.py
src/services/transcript/: transcript_provider_abc.py  whisper.py  youtube.py
src/utils/: json_.py  pytube_hotfix.py  time_.py
